--- a/_config.yml
+++ b/_config.yml
@@ -1,188 +1,109 @@
 # The Site Configuration
-#
-# Import the theme
 theme: jekyll-theme-chirpy
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
+# Language and timezone settings
 lang: en
+timezone: # Set your timezone, e.g., "America/New_York"
 
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+# Site metadata
+title: FuzzBlackbox
+tagline: Learn, Share, Innovate
+description: >-
+  Welcome to FuzzBlackbox, your resource for knowledge and innovation.
+url: "" # Add your site URL without trailing slash, e.g., "https://username.github.io"
 
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
-
-title: FuzzBlackbox # the main title
-
-tagline: bullshit # it will display as the subtitle
-
-description: >- # used by seo meta and the atom feed
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
-
+# Social media and contact information
 github:
-  username: fuzzblackbox # change to your GitHub username
+  username: fuzzblackbox
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: twitter_username
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Your Full Name
+  email: example@domain.com
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/username
+    - https://github.com/username
+    # Add more links if necessary
 
-# Site Verification Settings
+# Webmaster tools verification
 webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+  google: # Add your Google verification code
+  bing: # Add your Bing verification code
 
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
-
-# Web Analytics Settings
+# Analytics
 analytics:
   google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+    id: # Your Google Analytics ID
 
 # Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter # Supported provider (only "goatcounter" is valid)
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light — Use the light color scheme
-#     dark — Use the dark color scheme
-#
-theme_mode:  # [light | dark]
+# Appearance settings
+theme_mode: dark # Choose between "light", "dark", or leave empty for system default
 
-# The CDN endpoint for media resources.
-# Notice that once it is assigned, the CDN url
-# will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
-cdn:
+# Media settings
+cdn: # Add your CDN URL if used
+avatar: # Add the avatar image URL or leave blank
+social_preview_image: # Add a URL for the site's social preview image
 
-# the avatar on sidebar, support local or CORS resources
-avatar:
-
-# The URL of the site-wide social preview image used in SEO `og:image` meta tag.
-# It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
-
-# boolean type, the global switch for TOC in posts.
+# Table of contents global setting
 toc: true
 
+# Comments
 comments:
-  # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
-  # The provider options are as follows:
+  provider: # Uncomment and set a provider if needed [disqus | utterances | giscus]
   disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings › https://utteranc.es/
-  utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
-  giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    shortname: # Add Disqus shortname
 
-# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
+# Self-hosted static assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development | production]
+    enabled: false
 
+# Progressive Web App (PWA) settings
 pwa:
-  enabled: true # The option for PWA feature (installable)
+  enabled: true
   cache:
-    enabled: true # The option for PWA offline cache
-    # Paths defined here will be excluded from the PWA cache.
-    # Usually its value is the `baseurl` of another website that
-    # shares the same domain name as the current website.
+    enabled: true
     deny_paths:
-      # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
+      # Add paths you want to exclude from caching
 
+# Pagination
 paginate: 10
 
-# The base URL of your site
+# Base URL of your site
 baseurl: ""
 
-# ------------ The following options are not recommended to be modified ------------------
-
+# Syntax highlighting and kramdown settings
 kramdown:
   footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
-  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
+  syntax_highlighter_opts:
     css_class: highlight
-    # default_lang: console
     span:
       line_numbers: true
     block:
       line_numbers: true
       start_line: 1
 
+# Collections
 collections:
   tabs:
     output: true
     sort_by: order
-  categories:
-    output: true
 
-
-
+# Defaults
 defaults:
   - scope:
-      path: "" # An empty string here means all files in the project
+      path: "" # Applies to all files
       type: posts
     values:
       layout: post
-      comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
+      comments: true
+      toc: true
       permalink: /posts/:title/
   - scope:
       path: _drafts
@@ -190,14 +111,16 @@ defaults:
       comments: false
   - scope:
       path: ""
-      type: tabs # see `site.collections`
+      type: tabs
     values:
       layout: page
       permalink: /:title/
 
+# Sass
 sass:
   style: compressed
 
+# HTML compression settings
 compress_html:
   clippings: all
   comments: all
@@ -207,6 +130,7 @@ compress_html:
   ignore:
     envs: [development]
 
+# Files to exclude from the build
 exclude:
   - "*.gem"
   - "*.gemspec"
@@ -216,7 +140,11 @@ exclude:
   - LICENSE
   - "*.config.js"
   - package*.json
+
+# Future posts settings
 future: true
+
+# Jekyll Archives Plugin Settings
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
